EPMRPP-115026 || Update mobitru attributes handling for video recording